src/test/examples/valid/extension/class/classFunctionCanAccessPrivateAttributes.wacc
begin
  class H is 
    private int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
    private int f() is 
       v = 3 ;
       return v
    end
  end
  int v = 0 
end