src/test/examples/invalid/semanticErr/extension/class/constructorNotBeingTheSameNameAsClass.wacc
begin
  class H is 
    private int v
    K(int v) end
  end
  int u = 0
end